--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "mobx": "^5.15.6",
+    "mobx-react": "^6.2.5",
     "react": "^16.13.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-star-rating-component": "^1.4.1",
+    "semantic-ui-react": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
